js module Split

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   <!--Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <!-- Icon -->
+  <link rel="Icon" href="resources/Icons/myDayIcon.png">
   <!--Entry-->
   <title>myDay:Day Planner App</title>
 </head>
@@ -47,6 +49,8 @@
 
 
   <!--Scripts-->
+  <script src="resources/js/cmd.js"></script>
+  <script src="resources/js/interface.js"></script>
   <script src="resources/js/main.js"></script>
 </body>
 </html>
