--- a/resources/css/settingsModal.css
+++ b/resources/css/settingsModal.css
@@ -114,7 +114,7 @@
   margin: 10px auto;
 }
 
-.modal-Graphic img{
+.modal-Graphic svg{
   position: absolute;
   max-width: 100%;
   max-height: 100%;
@@ -123,12 +123,15 @@
   margin: 0 auto;
 }
 
+.iconCircle{
+  fill: var(--mainAccent);
+}
+
 .modal-container h1,
 .modal-container p{
   position: relative;
   width: 100%;
   margin: 0 auto;
-  /* text-align: center; */
   transition: all .5s ease;
 }
 
@@ -139,7 +142,7 @@
 .modal-topicInfo hr{ 
   border: 0; 
   height: 1px; 
-  background-image: -webkit-linear-gradient(left, transparent, var(--mainAccent), transparent);
+  background-image: linear-gradient(to right, transparent, var(--mainAccent), transparent);
   width: 70%;
   margin: 0 auto;
 }
@@ -151,19 +154,15 @@
   overflow-y: auto;
   text-align: left;
   max-width: 95%;
-  /* animation: fadein .5s; */
-  /* animation: fadein .5s; */
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
-.modal-Content p{
-  opacity: 0;
+.modal-Content p:hover{
+  cursor: pointer;
+  color: var(--mainAccent);
 }
-
-.fadein{
-  /* animation: fadein .5s; */
-  transition: opacity .33s ease;
-}
-
 
 .modal-button-container{
   position: relative;
